--- a/config/database.yml
+++ b/config/database.yml
@@ -23,5 +23,9 @@ test:
   database: db/matsue_kousen_test
 
 production:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
   database: db/matsue_kousen_production
+  username: root # ここを root に変更する
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /run/mysqld/mysqld.sock
