--- a/config/database.yml
+++ b/config/database.yml
@@ -13,19 +13,19 @@ default: &default
 
 development:
   <<: *default
-  database: db/matsue_kousen_development
+  database: matsue_kousen_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/matsue_kousen_test
+  database: matsue_kousen_test
 
 production:
   adapter: mysql2
   encoding: utf8
-  database: db/matsue_kousen_production
+  database: matsue_kousen_production
   username: root # ここを root に変更する
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /run/mysqld/mysqld.sock
